# pcs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  test.toml
.claude/: notes.md
.claude/agent-memory/rust-coder/: MEMORY.md  feedback_cross_task_edits.md  feedback_manifest_atomicity.md  project_ecs_rewrite.md  project_hardening_tasks7_8.md  project_phase1_windows.md  project_phase2_arrowworld.md  project_phase2c_checkpointing.md  project_phase2e_streaming.md  project_phase3_arrow_pipeline.md  project_phase3_host_complete.md  project_phase4_parallelism.md  project_phase5_io_layer.md  project_phase6_distributed.md  project_phase7_benchmarks.md  project_phase8_promotion.md  project_phase_schema_versioning.md  project_pipeline_soundness.md  project_rename_pass2.md  project_rename_pcs.md  project_reorg_source_tree.md  project_s4_service_builder.md  project_s5_standalone_runner.md  project_s7_http_shutdown.md  project_s8_cli_binary.md  project_scheduler_v2.md  project_service_s3_config.md  project_task11_runtime_holder.md  project_task14_bindgen_sketch.md  project_task14_wasm_host.md  project_task14_wasm_scope.md  project_task28_raft_sm_index.md
.claude/agent-memory/rust-dev/: MEMORY.md  project_ecs_performance_research.md
.claude/agent-memory/rust-ds-db-expert/: MEMORY.md  design_24_claim_retry_cap.md  feedback_no_git_commits.md  project_consensus_determinism_invariants.md  project_ecs_architecture.md  project_openraft_migration.md  project_openraft_type_config.md  project_redb_raft_design.md
.claude/agent-memory/rust-wasm/: MEMORY.md  pins-md-draft.md  toolchain-pins-2026-04-15.md  wit-draft-pcs-pipeline.md
.claude/agent-memory/rust-wasm-component-dev/: MEMORY.md  cargo-component-cdylib-workflow.md  export-pipeline-macro-design.md  pipeline-run-on-shape.md  task-13-blockers.md  task-13-pcs-guest-sdk.md  team-rule-atomic-manifest.md  team-rule-design-review.md  team-rule-respect-aborts.md  try-run-sync-limitation.md
.claude/agent-memory/tech-writer/: MEMORY.md  project_api_surface.md  project_columnar_pivot.md  project_doc_quality.md  project_ecs_rewrite.md  project_service_layer.md
.claude/agent-memory/workflow-expert/: MEMORY.md  user_nassor.md  (+4 more)
.claude/agents/: rust-coder.md  rust-dev.md  rust-ds-db-expert.md  rust-wasm.md  tech-writer.md  web-designer.md  workflow-expert.md
.github/workflows/: ci.yml  docs.yml
crates/pcs-core/: Cargo.toml
crates/pcs-core/benches/: ipc_checkpoint.rs  parallelism.rs  parallelism_compute.rs  pipeline.rs  tpch_q1.rs  tpch_q6.rs
crates/pcs-core/src/: column.rs  component.rs  dataset.rs  error.rs  lib.rs  partition.rs  pipeline.rs  resource.rs  retry.rs  row.rs  runtime.rs  scheduler.rs  schema.rs  system.rs  windows.rs
crates/pcs-core/src/dataset/: append.rs  builder.rs  chunks.rs  ipc.rs  lifecycle.rs  reads.rs  register.rs  resources.rs  write.rs
crates/pcs-core/src/io/: cast.rs  channel_sink.rs  channel_source.rs  mod.rs  sink.rs  source.rs
crates/pcs-core/src/pipeline/: builder.rs  dag.rs  execution.rs  registration.rs
crates/pcs-core/src/system/: closure.rs  field.rs  meta.rs  write_set.rs
crates/pcs-core/src/windows/: accumulator.rs  function.rs  hash.rs  result.rs  spec.rs  system.rs  time.rs  watermark.rs
crates/pcs-core/tests/: scheduler_dag.rs  scheduler_etl.rs  scheduler_etl_parallel.rs  window_aggregation.rs
crates/pcs-guest/: Cargo.toml  PINS.md
crates/pcs-guest-smoketest/: Cargo.toml
crates/pcs-guest-smoketest/src/: bindings.rs  lib.rs
crates/pcs-guest/src/: lib.rs
crates/pcs-guest/wit/: pipeline.wit
crates/pcs-service/: Cargo.toml
crates/pcs-service/benches/: distributed.rs  vs_datafusion_q6.rs
crates/pcs-service/examples/: datafusion_interop.rs  distributed_scheduler.rs  distributed_windowed.rs  scheduler_dag.rs  scheduler_etl.rs  scheduler_etl_parallel.rs  scheduler_parquet_etl.rs  window_aggregation.rs
crates/pcs-service/examples/configs/: README.md  cluster.toml  extension_example.toml  standalone.toml  standalone_wasm.toml
crates/pcs-service/examples/configs/fixtures/: orders.csv
crates/pcs-service/examples/distributed_fulfillment/: Dockerfile  README.md  components.rs  docker-compose.yml  generator.rs  main.rs  resources.rs  store.rs  systems.rs
crates/pcs-service/examples/distributed_fulfillment/config/: node1.yaml  node2.yaml  node3.yaml
crates/pcs-service/src/: distributed.rs  lib.rs  service.rs
crates/pcs-service/src/distributed/: accumulator_store.rs  checkpoint.rs  consensus.rs  parquet_checkpoint.rs  partition.rs  runner.rs  strategy.rs
crates/pcs-service/src/distributed/consensus/: driver.rs  snapshot.rs  state_machine.rs  storage.rs  store.rs  transport.rs  types.rs
crates/pcs-service/src/io/: csv_sink.rs  csv_source.rs  datafusion_source.rs  json_sink.rs  json_source.rs  mod.rs  parquet_sink.rs  parquet_source.rs
crates/pcs-service/src/service/: builder.rs  cluster.rs  config.rs  factories.rs  http.rs  loader.rs  logging.rs  registry.rs  shutdown.rs  standalone.rs  validation.rs
crates/pcs-service/src/service/factories/: channel.rs  csv.rs  json.rs  parquet.rs
crates/pcs-service/src/wasm/: bindings.rs  engine.rs  host_impl.rs  mod.rs  runner.rs
crates/pcs-service/tests/: checkpoint_chaos.rs  distributed_harness_smoke.rs  distributed_integration_chaos.rs  distributed_scheduler.rs  raft_consensus_chaos.rs  runner_chaos.rs  scheduler_parquet_etl.rs  service_integration.rs  transport_chaos.rs  wasm_chaos.rs  wasm_roundtrip.rs  windows_integration.rs
crates/pcs-service/tests/common/: mod.rs
docs/: build-local.sh  config.toml
docs/content/: _index.md  dataset.md  distributed.md  io.md  pipeline.md  scheduler.md  service.md  systems.md  tracing.md
docs/static/: script.js  styles.css
docs/templates/: 404.html  base.html  dataset.html  distributed.html  index.html  io.html  page.html  pipeline.html  scheduler.html  section.html  service.html  systems.html  tracing.html
examples/wasm/order_processing/: Cargo.toml  README.md
examples/wasm/order_processing/src/: lib.rs
scripts/: check-wasm-guest.sh
scripts/ci/: guest_ipc_roundtrip.sh
(+4 files in other folders)
