[workspace]
members = [
    "crates/pcs-core",
    "crates/pcs-guest",
    "crates/pcs-guest-smoketest",
    "crates/pcs-service",
    "examples/wasm/order_processing",
]
resolver = "2"

[workspace.package]
rust-version = "1.95.0"

[workspace.dependencies]
# Arrow core sub-crates — exact pins enforced at workspace level.
# `arrow-ipc` is exact-pinned because it defines the on-disk checkpoint format.
# Bump explicitly after validating round-trip reads against an existing checkpoint store.
# arrow-buffer / arrow-arith / arrow-ord are exact-pinned: tightly coupled to arrow memory layout.
arrow-array   = { version = "58.1.0" }
arrow-schema  = { version = "58.1.0" }
arrow-buffer  = { version = "=58.1.0" }
arrow-select  = { version = "58.1.0" }
arrow-cast    = { version = "58.1.0" }
arrow-arith   = { version = "=58.1.0" }
arrow-ord     = { version = "=58.1.0" }
arrow-ipc     = { version = "=58.1.0" }
arrow-json    = { version = "58.1.0" }
arrow-csv     = { version = "58.1.0" }
parquet       = { version = "=58.1.0", default-features = false, features = ["arrow", "snap"] }
serde_arrow   = { version = "0.14.0", features = ["arrow-58"] }

# Common runtime deps
async-trait   = { version = "0.1.89" }
tokio         = { version = "1.52.1", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
tokio-util    = { version = "0.7.18", features = ["rt"] }
futures       = { version = "0.3.32" }
futures-util  = { version = "0.3.32" }
serde         = { version = "1.0.228", features = ["derive"] }
serde_json    = { version = "1.0.149" }
serde_bytes   = { version = "0.11.19" }
tracing       = { version = "0.1.44" }
rayon         = { version = "1.12.0" }
num_cpus      = { version = "1.17.0" }
fnv           = { version = "1.0.7" }
rand          = { version = "0.10.1" }
uuid          = { version = "1.23.1", features = ["v4", "serde"] }

# WASM component model host
wasmtime      = { version = "44.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "44.0.0" }
sha3          = { version = "0.10.8" }

# Dev / bench deps shared across crates
criterion     = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
postcard      = { version = "1.1.3", features = ["alloc"] }

