[package]
name = "pcs-service"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
description = "The pcs-service binary: TOML configuration, factory registry, axum HTTP control plane, and built-in standalone & Raft cluster runners."
license = "AGPL-3.0-only"

[features]
tracing = ["dep:tracing", "pcs-core/tracing"]
io = [
    "dep:arrow-json",
    "dep:arrow-csv",
    "dep:parquet",
    "pcs-core/io",
]
datafusion = ["io", "dep:datafusion"]
windows = ["pcs-core/windows"]
distributed = [
    "dep:redb", "dep:uuid", "dep:serde_json", "dep:serde_bytes", "dep:hex",
    "tokio/net", "tokio/io-util", "dep:tokio-util",
    "pcs-core/distributed",
    "pcs-core/runtime",
]
distributed-raft = ["distributed", "dep:openraft", "dep:futures-util", "dep:postcard"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:sha3", "pcs-core/runtime"]
service = [
    "io", "distributed", "tracing",
    "dep:toml",
    "dep:axum", "dep:tower", "dep:tower-http", "dep:tokio-util",
    "dep:tracing-subscriber",
    "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-prometheus",
    "dep:prometheus",
    "dep:serde_json",
    "dep:clap", "dep:reqwest",
]
service-cluster = ["service", "distributed-raft"]

[dependencies]
pcs-core = { path = "../pcs-core" }

async-trait   = { workspace = true }
tokio         = { workspace = true }
futures       = { workspace = true }
futures-util  = { workspace = true, optional = true }
serde         = { workspace = true }
serde_json    = { workspace = true, optional = true }
serde_bytes   = { workspace = true, optional = true }
tracing       = { workspace = true, optional = true }
fnv           = { workspace = true }
rand          = { workspace = true }
uuid          = { workspace = true, optional = true }

wasmtime      = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
sha3          = { workspace = true, optional = true }

redb          = { version = "4.0.0", optional = true }
openraft      = { version = "0.10.0-alpha.17", features = ["serde"], optional = true }
postcard      = { version = "1.1", features = ["alloc"], optional = true }
hex           = { version = "0.4.3", optional = true }
toml          = { version = "0.8", optional = true }
axum          = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"], optional = true }
tower         = { version = "0.5", optional = true }
tower-http    = { version = "0.6", default-features = false, features = ["trace", "timeout", "limit"], optional = true }
tokio-util    = { version = "0.7", features = ["rt"], optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json", "ansi"], optional = true }
opentelemetry       = { version = "0.31", optional = true }
opentelemetry_sdk   = { version = "0.31", features = ["metrics"], optional = true }
opentelemetry-prometheus = { version = "0.31", optional = true }
prometheus          = { version = "0.14", default-features = false, optional = true }
clap          = { version = "4", features = ["derive", "env"], optional = true }
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Arrow sub-crates (always required for format impls)
arrow-array   = { workspace = true }
arrow-schema  = { workspace = true }
arrow-ipc     = { workspace = true }

# IO format deps
arrow-json    = { workspace = true, optional = true }
arrow-csv     = { workspace = true, optional = true }
parquet       = { workspace = true, optional = true }

# DataFusion integration
datafusion    = { version = "53", default-features = false, features = ["sql", "parquet"], optional = true }

[[bin]]
name = "pcs-service"
path = "src/bin/pcs-service/main.rs"
required-features = ["service"]

[[example]]
name = "scheduler_etl"
path = "examples/scheduler_etl.rs"

[[example]]
name = "scheduler_etl_parallel"
path = "examples/scheduler_etl_parallel.rs"

[[example]]
name = "scheduler_dag"
path = "examples/scheduler_dag.rs"

[[example]]
name = "scheduler_parquet_etl"
path = "examples/scheduler_parquet_etl.rs"
required-features = ["io"]

[[example]]
name = "distributed_scheduler"
path = "examples/distributed_scheduler.rs"
required-features = ["distributed"]

[[example]]
name = "datafusion_interop"
path = "examples/datafusion_interop.rs"
required-features = ["datafusion"]

[[example]]
name = "window_aggregation"
path = "examples/window_aggregation.rs"
required-features = ["windows"]

[[example]]
name = "distributed_windowed"
path = "examples/distributed_windowed.rs"
required-features = ["distributed", "windows"]

[[example]]
name = "distributed_fulfillment"
path = "examples/distributed_fulfillment/main.rs"
required-features = ["service-cluster"]

[[bench]]
name = "distributed"
harness = false
required-features = ["distributed"]

[[bench]]
name = "vs_datafusion_q6"
harness = false
required-features = ["datafusion"]

[dev-dependencies]
criterion     = { workspace = true }
tempfile      = "3.27.0"
serde         = { version = "1.0.228", features = ["derive"] }
postcard      = { version = "1.1.1", features = ["alloc"] }
anyhow        = "1"
sha3          = "0.10"
libc          = "0.2"
arrow-array   = { workspace = true }
arrow-schema  = { workspace = true }
tokio         = { version = "1.51.1", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid          = { version = "1.23.0", features = ["v4", "serde"] }
redb          = { version = "4.0.0" }
openraft      = { version = "0.10.0-alpha.17", features = ["serde"] }
tokio-util    = { version = "0.7", features = ["rt"] }
datafusion    = { version = "53", default-features = false, features = ["sql", "parquet"] }
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest_blocking = { package = "reqwest", version = "0.11", features = ["blocking", "json"] }
testcontainers = "0.27"
toxiproxy_rust = { git = "https://github.com/itarato/toxiproxy_rust", branch = "master" }
tracing       = { version = "0.1.44" }
opentelemetry_sdk = { version = "0.31", features = ["metrics"] }
opentelemetry-prometheus = { version = "0.31" }
opentelemetry  = { version = "0.31" }
prometheus     = { version = "0.14", default-features = false }
num_cpus       = { version = "1" }
rayon          = { version = "1" }
serde_arrow    = { version = "0.14.0", features = ["arrow-58"] }

